# helloworld

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  bandit.yml  index.html  pyproject.toml  tasks.py
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml  dependabot.yml  release.yml
docs/: mkdocs.yml
docs/docs/api/: helloworld.md
docs/site/: 404.html  index.html  objects.inv  sitemap.xml
docs/site/api/helloworld/: index.html
search/: search_index.json
src/helloworld/: __main__.py  hello.py
tests/: test_helloworld.py
