[project]
name = "helloworld"
version = "0.1.0"
description = ""
authors = [
    {name = "Flint, Kevin (HQP)",email = "kevin.flint@roberthalf.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]

[tool.poetry]
packages = [{include = "helloworld", from = "src"}]


[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
